test/mutation_analysis/s0066_plus_one/hafis/o3/mutants/6/result.txt
./test/mutation_analysis/s0066_plus_one/hafis/o3/mutants/6/Solution.java:35: error: unreachable statement
        if (carry != 0) {
        ^
1 error
